<resources>
    <string name="app_name">My Application</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>




    <string name="title_activity_create_item">Create Item</string>
    <string name="title_activity_create_account">Create Account</string>

    <string name="group_name">Group name:</string>
    <string name="start_date">Start date:</string>
    <string name="change_image">Change Image</string>
    <string name="members">Members:</string>
    <string name="new_member">Add another member</string>
    <string name="submit">Create Account</string>
    <string name="clear">Clear</string>

    <string name="item_date">Date:</string>
    <string name="item_name">Item Name:</string>
    <string name="amount">Amount:</string>
    <string name="account">Account:</string>
    <string name="paid_by">Paid by:</string>
    <string name="paid_for">Paid for:</string>
    <string name="location_text">Location:</string>
    <string name="get_location">Get Location</string>
    <string name="done">Done</string>
    <string name="title_activity_account_list">Account List</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="delete_message">Delete Account?</string>

    <string name="select_all">Select All</string>
    <string name="select_members">Select Members</string>
    <string name="select_account">Select Account</string>
    <string name="title_activity_update_account">UpdateAccount</string>
    <string name="title_activity_activity_map">ActivityMap</string>
    <string name="title_activity_account_detail">AccountDetail</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
