<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
tools:context=".CreateItem"
android:layout_width="fill_parent"
android:layout_height="fill_parent" >

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/itemDate"
        android:text="@string/item_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/itemDateInput"
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems ="10"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/itemDate"
        android:onClick="onClick" />

    <TextView
        android:id="@+id/itemName"
        android:text="@string/item_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/itemDateInput"
        android:layout_marginTop="22dp" />

    <EditText
        android:id="@+id/itemNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/itemName"
        android:onClick="onClick" />

    <TextView
        android:id="@+id/amount"
        android:text="@string/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/itemNameInput"
        android:layout_marginTop="22dp" />

    <TextView
        android:id="@+id/dollarSign"
        android:text="$"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/amount"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/amountInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minEms="10"
        android:layout_below="@+id/amount"
        android:layout_toRightOf="@+id/dollarSign"
        android:layout_toEndOf="@+id/dollarSign"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/account"
        android:text="@string/account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/amountInput"
        android:layout_marginTop="22dp" />

    <EditText
        android:id="@+id/accountSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/account"
        android:onClick="onClick" />

    <TextView
        android:id="@+id/payer"
        android:text="@string/paid_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/accountSelect"
        android:layout_marginTop="22dp" />

    <EditText
        android:id="@+id/payerInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/payer"
        android:onClick="onClick" />

    <TextView
        android:id="@+id/payTo"
        android:text="@string/paid_for"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/payerInput"
        android:layout_marginTop="22dp" />

    <EditText
        android:id="@+id/payToInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/payTo"
        android:onClick="onClick" />

    <ImageView
        android:id="@+id/itemPic"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/payToInput"
        android:layout_marginTop="22dp"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/default_user_image" />

    <Button
        android:id="@+id/itemPicPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/itemPic"
        android:layout_marginLeft="5dp"
        android:layout_alignTop="@id/itemPic"
        android:layout_alignBottom="@id/itemPic"
        android:text="@string/change_image"
        android:onClick="onClick" />

    <TextView
        android:id="@+id/locationText"
        android:text="@string/location_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/itemPic"
        android:layout_marginTop="22dp" />

    <EditText
        android:id="@+id/locationInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/locationText"/>

    <Button
        android:id="@+id/getLocation"
        android:text="@string/get_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/locationInput"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/done"
        android:text="@string/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/getLocation"
        android:layout_marginTop="22dp"
        android:onClick="onClick" />

</RelativeLayout>
</ScrollView>
