<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".CreateAccount"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/groupName"
            android:text="@string/group_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" />

        <EditText
            android:id="@+id/groupNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/groupName" />

        <TextView
            android:id="@+id/startDate"
            android:text="@string/start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/groupNameInput"
            android:layout_marginTop="22dp" />

        <EditText
            android:id="@+id/startDatePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/startDate"
            android:onClick="onClick" />

        <ImageView
            android:id="@+id/groupPic"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/startDatePicker"
            android:layout_marginTop="22dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/default_user_image" />

        <Button
            android:id="@+id/groupPicPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/groupPic"
            android:layout_marginLeft="5dp"
            android:layout_alignTop="@id/groupPic"
            android:layout_alignBottom="@id/groupPic"
            android:text="@string/change_image"
            android:onClick="onClick" />

        <LinearLayout
            android:id="@+id/membersLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/groupPic"
            android:layout_marginTop="22dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/members"
                android:text="@string/members"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/member1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/addMemberLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/membersLayout"
            android:layout_marginTop="22dp"
            android:orientation="horizontal"
            android:onClick="onClick" >

            <ImageView
                android:id="@+id/addSign"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/add_sign"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true" />

            <TextView
                android:id="@+id/newMember"
                android:text="@string/new_member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <Button
            android:id="@+id/submit"
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/addMemberLayout"
            android:layout_marginTop="22dp"
            android:onClick="onClick" />

    </RelativeLayout>
</ScrollView>
